--- a/index.html
+++ b/index.html
@@ -133,83 +133,115 @@
     </div>
     <script>
         let board = ['', '', '', '', '', '', '', '', ''];
-        let currentPlayer = 'X';
-        let gameActive = true;
-        let playerMode = 'user';
+let currentPlayer = 'X';
+let gameActive = true;
+let playerMode = 'user';
 
-        document.addEventListener('DOMContentLoaded', () => {
-            createBoard();
-        });
+document.addEventListener('DOMContentLoaded', () => {
+    createBoard();
+});
 
-        function createBoard() {
-            const boardElement = document.getElementById('board');
-            for (let i = 0; i < 9; i++) {
-                const cell = document.createElement('div');
-                cell.classList.add('cell');
-                cell.setAttribute('data-index', i);
-                cell.addEventListener('click', () => cellClick(i));
-                boardElement.appendChild(cell);
-            }
+function createBoard() {
+    const boardElement = document.getElementById('board');
+    for (let i = 0; i < 9; i++) {
+        const cell = document.createElement('div');
+        cell.classList.add('cell');
+        cell.setAttribute('data-index', i);
+        cell.addEventListener('click', () => cellClick(i));
+        boardElement.appendChild(cell);
+    }
+}
+
+function cellClick(index) {
+    if (!gameActive || board[index] !== '') return;
+
+    board[index] = currentPlayer;
+    renderBoard();
+    checkWinner();
+    switchPlayer();
+
+    if (playerMode === 'bot' && currentPlayer === 'O') {
+        playBotMove();
+    }
+}
+
+function evaluate(board) {
+    const winningCombinations = [
+        [0, 1, 2], [3, 4, 5], [6, 7, 8],
+        [0, 3, 6], [1, 4, 7], [2, 5, 8],
+        [0, 4, 8], [2, 4, 6]
+    ];
+
+    for (const combination of winningCombinations) {
+        const [a, b, c] = combination;
+        if (board[a] === 'X' && board[b] === 'X' && board[c] === 'X') {
+            return -1; // Human wins
+        } else if (board[a] === 'O' && board[b] === 'O' && board[c] === 'O') {
+            return 1; // AI wins
         }
+    }
 
-        function cellClick(index) {
-            if (!gameActive || board[index] !== '') return;
+    return 0; // Draw
+}
 
-            board[index] = currentPlayer;
-            renderBoard();
-            checkWinner();
-            switchPlayer();
+function minimax(board, depth, isMaximizing) {
+    const score = evaluate(board);
 
-            if (playerMode === 'bot' && currentPlayer === 'O') {
-                playBotMove();
-            }
-        }
+    if (score !== 0) {
+        return score;
+    }
 
-        function playBotMove() {
     const emptyCells = board.reduce((acc, val, index) => {
         if (val === '') acc.push(index);
         return acc;
     }, []);
 
-    // Check for winning move
-    for (const index of emptyCells) {
-        const tempBoard = [...board];
-        tempBoard[index] = currentPlayer;
+    if (emptyCells.length === 0) {
+        return 0;
+    }
 
-        if (isWinner(tempBoard, currentPlayer)) {
-            setTimeout(() => cellClick(index), 500);
-            return;
+    if (isMaximizing) {
+        let bestScore = -Infinity;
+        for (const index of emptyCells) {
+            const tempBoard = [...board];
+            tempBoard[index] = 'O';
+            bestScore = Math.max(bestScore, minimax(tempBoard, depth + 1, false));
         }
-    }
-
-    // Check for blocking the user from winning
-    for (const index of emptyCells) {
-        const tempBoard = [...board];
-        tempBoard[index] = 'X'; // Assume user's move
-
-        if (isWinner(tempBoard, 'X')) {
-            setTimeout(() => cellClick(index), 500);
-            return;
+        return bestScore;
+    } else {
+        let bestScore = Infinity;
+        for (const index of emptyCells) {
+            const tempBoard = [...board];
+            tempBoard[index] = 'X';
+            bestScore = Math.min(bestScore, minimax(tempBoard, depth + 1, true));
         }
-    }
-
-    // Make a more strategic move
-    const strategicMoves = [4, 0, 2, 6, 8, 1, 3, 5, 7]; // Center, corners, and sides
-    const availableStrategicMoves = strategicMoves.filter(move => emptyCells.includes(move));
-
-    if (availableStrategicMoves.length > 0) {
-        const randomIndex = availableStrategicMoves[Math.floor(Math.random() * availableStrategicMoves.length)];
-        setTimeout(() => cellClick(randomIndex), 500);
-        return;
-    }
-
-    // If no strategic move is available, choose a random empty cell
-    if (emptyCells.length > 0) {
-        const randomIndex = emptyCells[Math.floor(Math.random() * emptyCells.length)];
-        setTimeout(() => cellClick(randomIndex), 500);
+        return bestScore;
     }
 }
 
+function playBotMove() {
+    const emptyCells = board.reduce((acc, val, index) => {
+        if (val === '') acc.push(index);
+        return acc;
+    }, []);
+
+    let bestScore = -Infinity;
+    let bestMove;
+
+    for (const index of emptyCells) {
+        const tempBoard = [...board];
+        tempBoard[index] = 'O';
+        const score = minimax(tempBoard, 0, false);
+        tempBoard[index] = ''; // Undo the move
+
+        if (score > bestScore) {
+            bestScore = score;
+            bestMove = index;
+        }
+    }
+
+    setTimeout(() => cellClick(bestMove), 500);
+}
 
 function isWinner(board, player) {
     const winningCombinations = [
@@ -228,75 +260,75 @@ function isWinner(board, player) {
     return false;
 }
 
+function renderBoard() {
+    const cells = document.getElementsByClassName('cell');
+    for (let i = 0; i < cells.length; i++) {
+        cells[i].innerText = board[i];
+    }
+}
 
-        function renderBoard() {
-            const cells = document.getElementsByClassName('cell');
-            for (let i = 0; i < cells.length; i++) {
-                cells[i].innerText = board[i];
-            }
+function checkWinner() {
+    const winningCombinations = [
+        [0, 1, 2], [3, 4, 5], [6, 7, 8],
+        [0, 3, 6], [1, 4, 7], [2, 5, 8],
+        [0, 4, 8], [2, 4, 6]
+    ];
+
+    for (const combination of winningCombinations) {
+        const [a, b, c] = combination;
+        if (board[a] && board[a] === board[b] && board[a] === board[c]) {
+            showWinningPopup(`Player ${currentPlayer} wins!`);
+            gameActive = false;
+            return;
         }
+    }
 
-        function checkWinner() {
-            const winningCombinations = [
-                [0, 1, 2], [3, 4, 5], [6, 7, 8],
-                [0, 3, 6], [1, 4, 7], [2, 5, 8],
-                [0, 4, 8], [2, 4, 6]
-            ];
+    if (!board.includes('')) {
+        showWinningPopup('It\'s a draw!');
+        gameActive = false;
+    }
+}
 
-            for (const combination of winningCombinations) {
-                const [a, b, c] = combination;
-                if (board[a] && board[a] === board[b] && board[a] === board[c]) {
-                    showWinningPopup(`Player ${currentPlayer} wins!`);
-                    gameActive = false;
-                    return;
-                }
-            }
+function switchPlayer() {
+    currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+    document.getElementById('status').innerText = `${currentPlayer}`;
+}
 
-            if (!board.includes('')) {
-                showWinningPopup('It\'s a draw!');
-                gameActive = false;
-            }
-        }
+function resetGame() {
+    board = ['', '', '', '', '', '', '', '', ''];
+    currentPlayer = 'X';
+    gameActive = true;
+    hideWinningPopup();
+    document.getElementById('status').innerText = `${currentPlayer}`;
+    renderBoard();
 
-        function switchPlayer() {
-            currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-            document.getElementById('status').innerText = `${currentPlayer}`;
-        }
+    if (playerMode === 'bot' && currentPlayer === 'O') {
+        playBotMove();
+    }
+}
 
-        function resetGame() {
-            board = ['', '', '', '', '', '', '', '', ''];
-            currentPlayer = 'X';
-            gameActive = true;
-            hideWinningPopup();
-            document.getElementById('status').innerText = `${currentPlayer}`;
-            renderBoard();
+function changePlayerMode() {
+    playerMode = document.getElementById('playerMode').value;
+    resetGame();
+}
 
-            if (playerMode === 'bot' && currentPlayer === 'O') {
-                playBotMove();
-            }
-        }
+function showWinningPopup(message) {
+    const popup = document.getElementById('winningPopup');
+    const winnerText = document.getElementById('winnerText');
+    winnerText.innerText = message;
+    popup.style.display = 'flex';
+}
 
-        function changePlayerMode() {
-            playerMode = document.getElementById('playerMode').value;
-            resetGame();
-        }
+function hideWinningPopup() {
+    const popup = document.getElementById('winningPopup');
+    popup.style.display = 'none';
+}
 
-        function showWinningPopup(message) {
-            const popup = document.getElementById('winningPopup');
-            const winnerText = document.getElementById('winnerText');
-            winnerText.innerText = message;
-            popup.style.display = 'flex';
-        }
-        
-        function hideWinningPopup() {
-            const popup = document.getElementById('winningPopup');
-            popup.style.display = 'none';
-        }
+function closePopup() {
+    hideWinningPopup();
+    resetGame();
+}
 
-        function closePopup() {
-            hideWinningPopup();
-            resetGame();
-        }
     </script>
 </body>
 </html>
